Prevent unbreakable title from causing overflow
`overflow-wrap: break-word` does break words if text is otherwise unbreakable, but those soft-break opportunities are not considered when calculating the intrinsic size of elements. If the title contains block/inline-block elements (e.g. the Transliterate component) this can result in overflows.

Using `overflow-wrap: anywhere` instead solves the issue. Fixes #2554.

--- a/ui/src/components/common/ItemOverview.scss
+++ b/ui/src/components/common/ItemOverview.scss
@@ -27,7 +27,7 @@
     &__subtitle,
     &__description {
       margin: 10px 0;
-      overflow-wrap: break-word;
+      overflow-wrap: anywhere;
     }
 
     &__title {
